# email-server

./: Cargo.toml  README.md  app_config.json  email_config.json
.github/workflows/: release.yml
src/: main.rs
