[package]
name = "email-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
thiserror = "2.0"
openssl = "0.10"

[profile.release]
opt-level = 3            # 最高优化级别
lto = true              # 启用链接时优化
codegen-units = 1       # 降低并行度以提高优化
panic = 'abort'         # 在 panic 时直接终止
strip = true            # 自动剥离符号信息
